# agentcom

./: .agentcom.toml.un~  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  agentcom.toml  agentcom.toml~  build.rs
.agentcom/: handoff.md
.cargo/: config.toml
.github/workflows/: ci.yml
benchmark/: baseline.md  blog_post_draft.md
benchmark/swebench/: README.md  bench.py  fleet-deepseek.toml  fleet.toml  instances.json  requirements.txt
docs/: advanced.md  cli.md  config.md  providers.md  recipes.md  roles.md  tui.md
src/: cli.rs  config.rs  main.rs  paths.rs  prompt.rs
src/agent/: io_tasks.rs  mod.rs  spawn.rs
src/hub/: audit.rs  events.rs  interrupt.rs  mod.rs  rest.rs  scheduler.rs  webhook.rs
src/ipc/: client.rs  mod.rs  server.rs
src/protocol/: control.rs  event.rs  input.rs  mod.rs
src/store/: activity.rs  files.rs  messages.rs  mod.rs  schema.rs  sessions.rs  tasks.rs  transcript.rs
src/tui/: command.rs  input.rs  mod.rs  ringbuf.rs  theme.rs  transcript.rs  ui.rs
tests/: e2e_mock.rs  hooks_integration.rs  lane_enforcement.rs  review_gate.rs
tests/fixtures/: live_claude_2.1.173.ndjson
